Fix bug loading from graphs library

--- a/graph.html
+++ b/graph.html
@@ -15,11 +15,15 @@
 
       <script>
          const canv = document.getElementById("my_canvas");
+         canv.width  = 800;
+         canv.height = 200;
          const devicePixelRatio = window.devicePixelRatio || 1;
          const numX = Math.round(canv.clientWidth * devicePixelRatio);
-         const color = new ColorRGBA(Math.random(), Math.random(), Math.random(), 1);
-         const line = new WebglLine(color, numX);
-         const wglp = new WebGLplot(canv);
+         console.log("Num x points is: ", numX);
+         const color = new graphs.ColorRGBA(Math.random(), Math.random(), Math.random(), 1);
+         console.log(graphs);
+         const line = new graphs.WebglLine(color, numX);
+         const wglp = new graphs.WebGLPlot(canv);
 
          line.lineSpaceX(-1, 2 / numX);
          wglp.addLine(line);
@@ -31,13 +35,15 @@
          }
          window.requestAnimationFrame(newFrame);
 
+         let x = 0;
          function update() {
            const freq = 0.001;
-           const amp = 0.5;
+           const amp = 0.9;
            const noise = 0.1;
+           x += 0.1;
 
            for (let i = 0; i < line.numPoints; i++) {
-             const ySin = Math.sin(Math.PI * i * freq * Math.PI * 2);
+             const ySin = Math.sin(x + Math.PI * i * freq * Math.PI * 2);
              const yNoise = Math.random() - 0.5;
              line.setY(i, ySin * amp + yNoise * noise);
            }
